--- a/indi_allsky/flask/templates/manual_gpio.html
+++ b/indi_allsky/flask/templates/manual_gpio.html
@@ -36,7 +36,7 @@ var pin_states = {{ pin_states | tojson }};
 
 <div class="form-group row">
     <div class="col-sm-2">
-      1 - Pin {{ pin_names[0] }}
+      Pin {{ pin_names[0] }}
     </div>
     <div class="col-sm-2">
         <button id="pin-1-button" class="btn btn-dark" disabled="disabled">n/a</button>
@@ -47,7 +47,7 @@ var pin_states = {{ pin_states | tojson }};
 
 <div class="form-group row">
     <div class="col-sm-2">
-      2 - Pin {{ pin_names[1] }}
+      Pin {{ pin_names[1] }}
     </div>
     <div class="col-sm-2">
         <button id="pin-2-button" class="btn btn-dark" disabled="disabled">n/a</button>
@@ -58,7 +58,7 @@ var pin_states = {{ pin_states | tojson }};
 
 <div class="form-group row">
     <div class="col-sm-2">
-      3 - Pin {{ pin_names[2] }}
+      Pin {{ pin_names[2] }}
     </div>
     <div class="col-sm-2">
         <button id="pin-3-button" class="btn btn-dark" disabled="disabled">n/a</button>
