--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7411,7 +7411,7 @@ var camera_id = {{ camera_id }};
             <div id="MANUAL_GPIO__A_PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: 21</div>
+            <div>Example: 21 (GPIO21 / Pin 40 Raspi)</div>
         </div>
     </div>
 
@@ -7424,7 +7424,7 @@ var camera_id = {{ camera_id }};
             <div id="MANUAL_GPIO__A_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: 25</div>
+            <div>Example: 25 (GPIO25 / Pin 22 Raspi)</div>
         </div>
     </div>
 
@@ -7437,7 +7437,7 @@ var camera_id = {{ camera_id }};
             <div id="MANUAL_GPIO__A_PIN_3-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: 16</div>
+            <div>Example: 16 (GPIO16 / Pin 36 Raspi)</div>
         </div>
     </div>
 
