fix missing link to timelapse when keogram is missing

--- a/indi_allsky/flask/templates/videoviewer.html
+++ b/indi_allsky/flask/templates/videoviewer.html
@@ -440,7 +440,7 @@ function populate_videos(video_list) {
                 'alt'   : "Keogram",
             }).appendTo(k_a);
         } else {
-            keogram_div.append('None');
+            k_a.text('No Thumbnail');
         }
         
         row_div.appendTo($("#videos_div"));
