--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1407,7 +1407,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_STRETCH__MODE1_STDDEVS(class='form-control bg-secondary') }}
             <div id="IMAGE_STRETCH__MODE1_STDDEVS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Black level cutoff in standard deviations.  Lower number results in greater dynamic range.</div>
+        <div class="col-sm-8">
+            <div>Default 2.25 - Black level cutoff in standard deviations.  Lower number results in greater dynamic range.</div>
+        </div>
     </div>
 
     <div class="form-group row">
@@ -1418,7 +1420,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_STRETCH__MODE1_GAMMA(class='form-control bg-secondary') }}
             <div id="IMAGE_STRETCH__MODE1_GAMMA-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Default 3.0</div>
+        </div>
     </div>
 
     <hr>
