--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7403,6 +7403,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div><a href="{{ url_for('indi_allsky.manual_gpio_view') }}" class="text-decoration-none link-info">Manual GPIO Control</a></div>
+            <div><span class="badge rounded-pill bg-warning text-dark">Note</span> GPIOs 1-8 are not recommended due to the internal pull-up being enabled by default</div>
         </div>
     </div>
 
