set page title using variables

--- a/indi_allsky/flask/templates/astropanel.html
+++ b/indi_allsky/flask/templates/astropanel.html
@@ -20,7 +20,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: astropanel{% endblock %}
+{% block title %}indi-allsky: {{ title }}{% endblock %}
 
 {% block head %}
 <meta charset="UTF-8">
