--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: Config{% endblock %}
+{% block title %}indi-allsky: {{ title }}{% endblock %}
 
 {% block head %}
 <style>
