--- a/indi_allsky/flask/templates/lag.html
+++ b/indi_allsky/flask/templates/lag.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: Image Lag{% endblock %}
+{% block title %}indi-allsky: {{ title }}{% endblock %}
 
 {% block head %}
 <style>
