--- a/indi_allsky/flask/templates/view_image.html
+++ b/indi_allsky/flask/templates/view_image.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: {{ title }}{% endblock %}
+{% block title %}{{ website_title }}: {{ title }}{% endblock %}
 
 {% block head %}
 <meta charset="UTF-8">
