rename title variable

--- a/indi_allsky/flask/templates/adu.html
+++ b/indi_allsky/flask/templates/adu.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ website_title }}: {{ title }}{% endblock %}
+{% block title %}{{ website_title }}: {{ page_title }}{% endblock %}
 
 {% block head %}
 <style>
