--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7599,7 +7599,7 @@ var camera_id = {{ camera_id }};
             <div id="DEW_HEATER__PWM_FREQUENCY-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Default: 500</div>
+            <div>Default: 500 - Only used for Hardware PWM</div>
         </div>
     </div>
 
