--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -5,6 +5,11 @@
 {% block head %}
 <meta charset="UTF-8">
 <style>
+#wrapper {
+    position: relative;
+    display: inline-block;
+}
+
 #latest-image {
     max-width: 100%;
     max-height: 90vh;
@@ -15,6 +20,8 @@
 
 #starmap_container {
     position: absolute;
+    top: 0;
+    left: 0;
     overflow: hidden;
     /* Debugging */
     border: 3px solid red;
@@ -233,10 +240,12 @@ $( document ).ready(function() {
     </div>
     <div class="row h-75 align-items-center">
         <div class="col-12 text-center">
+          <div id="wrapper">
+            <img id="latest-image">
             <div id="starmap_container">
                 <div id="starmap"></div>
             </div>
-            <img id="latest-image">
+          </div>
         </div>
     </div>
 </div>
