--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -49,6 +49,12 @@ var camera_id = {{ camera_id }};
 var refreshInterval = {{ refreshInterval | int }};
 var night = {{ night }};
 var fullscreen = false;  // initial state
+
+var camera_latitude = {{ camera_latitude }};
+var camera_longitude = {{ camera_longitude }};
+var camera_lensimagecircle = {{ camera_lensimagecircle }};
+var camera_lens_offset_x = {{ camera_lens_offset_x }};
+var camera_lens_offset_y = {{ camera_lens_offset_y }};
 var camera_az = {{ camera_az }};
 var vs_az = 0;  // initial state
 
@@ -98,8 +104,8 @@ async function loop() {
         const render_height = $('#latest-image').height();
 
         // Determine offsets of the starmap overlay
-        const bias_left = -( ( {{ camera_lensimagecircle }} + {{ camera_lens_offset_x }} ) * render_width / image_width - render_width ) / 2;
-        const bias_top = -( ( {{ camera_lensimagecircle }} + {{ camera_lens_offset_y }} ) * render_width / image_width - render_height ) / 2;
+        const bias_left = -( ( camera_lensimagecircle + camera_lens_offset_x ) * render_width / image_width - render_width ) / 2;
+        const bias_top = -( ( camera_lensimagecircle + camera_lens_offset_y ) * render_width / image_width - render_height ) / 2;
 
         // Apply those dimensions to the starmap container
         $('#starmap_container').css({
@@ -119,8 +125,8 @@ async function loop() {
     planetarium = S.virtualsky({
         id: 'starmap',
         projection: 'fisheye',
-        latitude: {{ camera_latitude }},
-        longitude: {{ camera_longitude }},
+        latitude: camera_latitude,
+        longitude: camera_longitude,
         az: vs_az,
         live: true,
         constellations: true,
@@ -135,8 +141,8 @@ async function loop() {
         credit: false,
         /* force the star map size here by using the lensImageCircle
         and resizing based on the ratio of the actual image sized versus rendered size */
-        width: {{ camera_lensimagecircle }} * render_width / image_width,
-        height: {{ camera_lensimagecircle }} * render_width / image_width,
+        width: camera_lensimagecircle * render_width / image_width,
+        height: camera_lensimagecircle * render_width / image_width,
         /* debugging - reduce star count */
         magnitude: 4,
         });
