log variables to console

--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -61,6 +61,13 @@ var vs_az = 0;  // initial state
 var planetarium;
 
 function init() {
+    console.log("Latitude: " + camera_latitude);
+    console.log("Longitude: " + camera_longitude);
+    console.log("Camera Image Circle: " + camera_lensimagecircle);
+    console.log("Lens Offset X: " + camera_lens_offset_x);
+    console.log("Lens Offset Y: " + camera_lens_offset_y);
+
+
     // Azimuth manipulations
     console.log("Camera Azimuth: " + camera_az);
 
