use browser location

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -63,6 +63,10 @@
                         <a href="{{ url_for('indi_allsky.chart_view') }}" class="nav-link link-info px-sm-0 px-2">
                             <img src="{{ url_for('indi_allsky.static', filename='svg/graph-up.svg') }}" width="16" height="16" alt="Charts"><span class="ms-1 d-none d-sm-inline">Charts</span></a>
                     </li>
+                    <li>
+                        <a href="{{ url_for('indi_allsky.sensor_panel_view') }}" class="nav-link link-info px-sm-0 px-2">
+                            <img src="{{ url_for('indi_allsky.static', filename='svg/journal-medical.svg') }}" width="16" height="16" alt="Sensor Panel"><span class="ms-1 d-none d-sm-inline">Sensor Panel</span></a>
+                    </li>
 
                     <li class="dropdown">
                         <a href="#" class="nav-link link-info dropdown-toggle px-sm-0 px-1" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
