add instructions for configuring virtualsky

--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -273,6 +273,11 @@ $( document ).ready(function() {
     <div class="row">
         <div class="text-muted text-center" id="message">Loading...</div>
     </div>
+    <div class="row align-items-center">
+        <div class="col-12 text-center" style="font-size:10px">
+            Latitude / Longitude / Azimuth / Image Circle / Offsets must be correctly configured under Config -> Location [tab]
+        </div>
+    </div>
     <div class="row h-75 align-items-center">
         <div class="col-12 text-center">
           <div id="wrapper">
