--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -56,6 +56,7 @@ var camera_lensimagecircle = {{ camera_lensimagecircle }};
 var camera_lens_offset_x = {{ camera_lens_offset_x }};
 var camera_lens_offset_y = {{ camera_lens_offset_y }};
 var camera_az = {{ camera_az }};
+var camera_alt = {{ camera_alt }};
 var vs_az = 0;  // initial state
 var planetarium;
 var redraw_planetarium = true;
@@ -73,6 +74,7 @@ function init() {
 
     // Azimuth manipulations
     console.log("Camera Azimuth: " + camera_az);
+    console.log("Camera Altitude: " + camera_alt);
 
     // VirtualSky reverses north/south for some reason
     vs_az = 180 - camera_az;
@@ -88,6 +90,49 @@ function init() {
     vs_az = 360 - vs_az;
 
     console.log("Calculated VirtualSky Azimuth: " + vs_az);
+
+
+    // Calculate latitude and longitude offset
+    if (vs_az % 180 > 90) {
+        az_90 = 90 - (camera_az % 90)
+    } else {
+        az_90 = camera_az % 90
+    }
+
+
+    var a_adj = 100;  // fake adjacent leg of triangle, can be any value
+
+    var a_opp = Math.tan(((90 - camera_alt) * Math.PI) / 180) * a_adj;
+
+    var b_hyp_2 = a_opp;
+    var lat_adj = Math.cos((az_90 * Math.PI) / 180) * b_hyp_2;
+
+    var z_opp = lat_adj;
+    var lat_deg_offset = Math.atan(z_opp / a_adj) * (180 / Math.PI);
+    if (camera_az < 90 || camera_az > 270) {
+        // relatively sure this is correct
+        lat_deg_offset *= -1;
+    }
+
+
+    var long_adj = Math.cos(((90 - az_90) * Math.PI) / 180) * b_hyp_2;
+    var z2_opp = long_adj;
+    long_deg_offset = Math.atan(z2_opp / a_adj) * (180 / Math.PI);
+    if (camera_az < 180) {
+        // unsure which direction should add/subract
+        // this may be backwards
+        long_deg_offset *= -1;
+    }
+
+
+    console.log("Latitude Offset: " + lat_deg_offset);
+    console.log("Longitude Offset: " + long_deg_offset);
+
+    camera_latitude += lat_deg_offset;
+    camera_longitude += long_deg_offset;
+
+    console.log("Latitude (with offset): " + camera_latitude);
+    console.log("Longitude (with offset): " + camera_longitude);
 
 
     loadNextImage();
