--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -47,6 +47,8 @@ var json_data = {
 var max_age = 900;
 var camera_id = {{ camera_id }};
 var refreshInterval = {{ refreshInterval | int }};
+var timestamp = {{ timestamp | int }};  // does not really do anything yet
+var live = {{ live }};
 var night = {{ night }};
 var fullscreen = false;  // initial state
 
@@ -184,13 +186,22 @@ async function loop() {
             });
 
 
+            if (timestamp) {
+                var clock = new Date(timestamp * 1000);
+            } else {
+                var clock = new Date();
+            }
+
+            console.log("Date: " + clock);
+
             planetarium = S.virtualsky({
                 id: 'starmap',
                 projection: 'fisheye',
+                live: live,
+                clock: clock,
                 latitude: camera_latitude,
                 longitude: camera_longitude,
                 az: vs_az,
-                live: true,
                 constellations: true,
                 showstarlabels: true,
                 showplanetlabels: true,
