--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -103,7 +103,7 @@ function init() {
     } else if (camera_az >= 180 && camera_az < 270) {
         az_90 = camera_az % 90
     } else {
-        az_90 = 90 - (caemra_az % 90)
+        az_90 = 90 - (camera_az % 90)
     }
 
 
