--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -67,8 +67,8 @@ var redraw_planetarium = true;
 function init() {
     redraw_planetarium = true;
 
-    console.log("Latitude: " + camera_latitude);
-    console.log("Longitude: " + camera_longitude);
+    console.log("Camera Latitude: " + camera_latitude);
+    console.log("Camera Longitude: " + camera_longitude);
     console.log("Camera Image Circle: " + camera_lensimagecircle);
     console.log("Lens Offset X: " + camera_lens_offset_x);
     console.log("Lens Offset Y: " + camera_lens_offset_y);
@@ -146,9 +146,9 @@ async function loop() {
 
 
         if (redraw_planetarium) {
-            azimuth_angle = $("#AZIMUTH_ANGLE").val();
-            latitude_offset = $("#LATITUDE_OFFSET").val();
-            longitude_offset = $("#LONGITUDE_OFFSET").val();
+            azimuth_angle = Number($("#AZIMUTH_ANGLE").val());
+            latitude_offset = Number($("#LATITUDE_OFFSET").val());
+            longitude_offset = Number($("#LONGITUDE_OFFSET").val());
 
             var vs_latitude = camera_latitude + latitude_offset;
             var vs_longitude = camera_longitude + longitude_offset;
@@ -181,7 +181,7 @@ async function loop() {
 
 
             // VirtualSky reverses north/south for some reason
-            var vs_az = 180 - camera_az;
+            var vs_az = 180 - azimuth_angle;
 
             // Make sure azimuth is between 0 and 360
             if (vs_az >= 360) {
@@ -338,15 +338,6 @@ function closeFullscreen() {
     fullscreen = false;
 }
 
-
-$( document ).ready(function() {
-    $('#latest-image').on("click", function() {
-        goFullscreen(this);
-    });
-
-    init();
-});
-
 </script>
 {% endblock %}
 
@@ -403,4 +394,39 @@ $( document ).ready(function() {
         </div>
     </div>
 </div>
+
+<script>
+$("#AZIMUTH_ANGLE").on("change", function() {
+    if (json_data['latest_image']) {
+        redraw_planetarium = true;
+        showImage(json_data['latest_image']);
+    };
+});
+
+$("#LATITUDE_OFFSET").on("change", function() {
+    if (json_data['latest_image']) {
+        redraw_planetarium = true;
+        showImage(json_data['latest_image']);
+    };
+});
+
+$("#LONGITUDE_OFFSET").on("change", function() {
+    if (json_data['latest_image']) {
+        redraw_planetarium = true;
+        showImage(json_data['latest_image']);
+    };
+});
+
+
+$( document ).ready(function() {
+    $('#latest-image').on("click", function() {
+        goFullscreen(this);
+    });
+
+    init();
+});
+
+</script>
+
+
 {% endblock %}
